// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#AccountCheckEmail render - magicLink 1`] = `
<ModalSection>
  <Heading
    element="h2"
    spaceAfter="small"
  >
    <Translate
      html={false}
      t="account.check_email"
      values={Object {}}
    />
  </Heading>
  <Illustration
    name="Mailbox"
    size="medium"
    spaceAfter="large"
  />
  <Text>
    <Translate
      html={false}
      t="account.check_email_magic_link"
      values={
        Object {
          "email": "foo@bar.com",
        }
      }
    />
  </Text>
</ModalSection>
`;

exports[`#AccountCheckEmail render - signUpConfirmation 1`] = `
<ModalSection>
  <Heading
    element="h2"
    spaceAfter="small"
  >
    <Translate
      html={false}
      t="account.check_email"
      values={Object {}}
    />
  </Heading>
  <Illustration
    name="Mailbox"
    size="medium"
    spaceAfter="large"
  />
  <Text>
    <Translate
      html={false}
      t="account.check_email_sign_up"
      values={
        Object {
          "email": "bar@foo.com",
        }
      }
    />
  </Text>
</ModalSection>
`;
